--- a/index.html
+++ b/index.html
@@ -1,7 +1,172 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
+<!--
+	Read Only by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+	<head>
+		<title>Portfolio</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+	</head>
+	<body class="is-preload">
+
+		<!-- Header -->
+			<section id="header">
+				<header>
+					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
+					<h1 id="logo"><a href="#">Pattarachai Yaisoong</a></h1>
+					<a href="https://drive.google.com/file/d/1zuAFnqENrZXhCkI-N0ZXyJQ0R0wwUsY2/view?usp=drive_link" class="active">Resume</a>
+					<p>Looking forward to my<br/>
+				    first work experience.</p>
+				</header>
+				<nav id="nav">
+					<ul>
+						<li><a href="#about" class="active">About</a></li>
+						<li><a href="#skill">Skills</a></li>
+						<li><a href="#project">Projects</a></li>
+						<li><a href="#contact">Contact</a></li>
+					</ul>
+				</nav>
+				<footer>
+					<ul class="icons">
+						<li><a href="https://www.linkedin.com/in/pattarachai-yaisoong" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://github.com/Success12016" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="mailto:pattarachai12016@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://www.facebook.com/pattarachai.yaisoong/" class="icon brands fa-facebook"><span class="label">Facebook</span></a></li>
+					</ul>
+				</footer>
+			</section>
+
+		<!-- Wrapper -->
+			<div id="wrapper">
+
+				<!-- Main -->
+					<div id="main">
+
+						<!-- One -->
+							<section id="about">
+								<div class="image main" data-position="center">
+									<img src="images/banner.jpg" alt="" />
+								</div>
+								<div class="container">
+									<header class="major">
+										<h2>About Me</h2>
+									</header>
+									<h3>Education</h3>
+									<h4>King Mongkut's University of Technology North Bangkok</h4>
+									<p>2020-2025 | GPAX 3.02</br>
+										Bachelor's Degree of Engineering</br>
+										College of Industrial Technology</br>
+										Electronics Engineering Technology (Computer)
+									</p>
+									<h4>Assumption College Samutprakarn School</h4>
+									<p>2008-2020 | GPAX 3.31</br>
+										High School Diploma</br>
+										Sciences and Mathematics Program
+									</p>
+									<h3>Work Experience</h3>
+									<h4>Tokio Marine Life Insurance (Thailand)</h4>
+									<p>January 2024 - May 2024 (4 Months)</br>
+										<b>Student (Intern) - Core Developer</b></br>
+										Updated existing programs/codes to be morecompatible with modern demands.</br>
+										Such as making a program to support automated PDF generation and email delivery to customers,</br>
+										in addition to traditional paper printing.</br>
+										Developed by using COBOL with AS400.
+									</p>
+								</div>
+							</section>
+
+						<!-- Two -->
+						<section id="skill">
+							<div class="container">
+								<h3>Practical Skills</h3>
+								<ul class="feature-icons">
+									<li class="icon solid fa-code">
+										<strong>Programming Languages:</strong> HTML, CSS, JavaScript, Python, Java, PHP, C++, COBOL
+									</li>
+									<li class="icon solid fa-cogs">
+										<strong>Frameworks & Libraries:</strong> React.js, Node.js, Express.js, EJS
+									</li>
+									<li class="icon solid fa-database">
+										<strong>Databases:</strong> MySQL, MongoDB
+									</li>
+									<li class="icon solid fa-tools">
+										<strong>Tools & Platforms:</strong> GitHub, VSCode, Docker, MATLAB, AS400
+									</li>
+								</ul>
+							</div>
+						</section>
+
+						<!-- Three -->
+							<section id="project">
+								<div class="container">
+									<h3>Projects</h3>
+									<div class="features">
+										<article>
+											<a href="https://github.com/ZUZPAIZXsep/gold-rfid-system" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<div class="inner">
+												<h4>Gold Inventory Monitoring System using RFID Technology</h4>
+												<p>Final graduation project.</br>
+													Developed a gold inventory system to be used with RFID Technology. Managing inventory, sales and employees</br>
+													Using CSS, JavaScript, EJS, Node.js, Express.js and MongoDB.</p>
+												<div class="project-links">
+													<a href="https://github.com/ZUZPAIZXsep/gold-rfid-system">Github</a>
+													<a href="https://drive.google.com/file/d/1ijjzqHHP_BjqO5ALQwD-fL1YN_pt06bV/view?usp=sharing">Thesis</a>
+												</div>
+											</div>
+										</article>
+										<article>
+											<a href="https://success12016.github.io/Simple-Weather-Report-App/" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<div class="inner">
+												<h4>Simple Weather Report App</h4>
+												<p>This weather-checking application provides real-time updates on temperature, humidity, wind speed/direction and air pressure across different countries and cities.</br>
+												Using JavaScript, HTML and CSS.</p>
+												<div class="project-links">
+													<a href="https://github.com/Success12016/Simple-Weather-Report-App">Github</a>
+													<a href="https://success12016.github.io/Simple-Weather-Report-App/">Live Demo</a>
+												</div>
+											</div>
+										</article>
+									</div>
+								</div>
+							</section>
+
+						<!-- Four -->
+							<section id="contact">
+								<div class="container">
+									<h3>Contact Me</h3>
+									<h4>
+										Phone: +66 95 427 7436 </br>
+										Email: pattarachai12016@gmail.com </br>
+										LinkedIn: Pattarachai Yaisoong </br>
+										Github: Success12016
+									</h4>
+								</div>
+							</section>
+					</div>
+
+				<!-- Footer -->
+					<section id="footer">
+						<div class="container">
+							<ul class="copyright">
+								<li>&copy; 2025 Pattarachai Yaisoong. All rights reserved.</li><li>Free Web Template from: <a href="http://html5up.net">HTML5 UP</a></li>
+							</ul>
+						</div>
+					</section>
+
+			</div>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
+	</body>
 </html>
