--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 												<h4>Gold Inventory Monitoring System using RFID Technology</h4>
 												<p>Final graduation project.</br>
 													Developed a gold inventory system to be used with RFID Technology. Managing inventory, sales and employees</br>
-													Using CSS, JavaScript, EJS, Node.js, Express.js and MongoDB.</p>
+													Using CSS, JavaScript, EJS, Bootstrap, Node.js, Express.js and MongoDB.</p>
 												<div class="project-links">
 													<a href="https://github.com/ZUZPAIZXsep/gold-rfid-system">Github</a>
 													<a href="https://drive.google.com/file/d/1ijjzqHHP_BjqO5ALQwD-fL1YN_pt06bV/view?usp=sharing">Thesis</a>
@@ -127,6 +127,18 @@
 												<div class="project-links">
 													<a href="https://github.com/Success12016/Simple-Weather-Report-App">Github</a>
 													<a href="https://success12016.github.io/Simple-Weather-Report-App/">Live Demo</a>
+												</div>
+											</div>
+										</article>
+										<article>
+											<a href="https://easy-bmi-calculator.onrender.com" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<div class="inner">
+												<h4>Easy BMI Calculator</h4>
+												<p>This calculator will calculates user's BMI by entering user's height and weight.</br>
+												Using Node.js, Express.js, EJS, HTML and CSS.</p>
+												<div class="project-links">
+													<a href="https://github.com/Success12016/easy-bmi-calculator">Github</a>
+													<a href="https://easy-bmi-calculator.onrender.com">Live Demo</a>
 												</div>
 											</div>
 										</article>
