add new project

--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
 								<h3>Practical Skills</h3>
 								<ul class="feature-icons">
 									<li class="icon solid fa-code">
-										<strong>Programming Languages:</strong> HTML, CSS, JavaScript, Python, Java, PHP, C++, COBOL
+										<strong>Programming Languages:</strong> HTML, CSS, JavaScript, Python, Java, PHP, C++, COBOL, TypeScript
 									</li>
 									<li class="icon solid fa-cogs">
-										<strong>Frameworks & Libraries:</strong> React.js, Node.js, Express.js, EJS
+										<strong>Frameworks & Libraries:</strong> React.js, Node.js, Express.js, EJS, Next.js, Tailwind CSS
 									</li>
 									<li class="icon solid fa-database">
 										<strong>Databases:</strong> MySQL, MongoDB
@@ -139,6 +139,18 @@
 												<div class="project-links">
 													<a href="https://github.com/Success12016/easy-bmi-calculator">Github</a>
 													<a href="https://easy-bmi-calculator.onrender.com">Live Demo</a>
+												</div>
+											</div>
+										</article>
+										<article>
+											<a href="https://commercehub-phi.vercel.app/" class="image"><img src="images/pic04.jpg" alt="" /></a>
+											<div class="inner">
+												<h4>EcommerceHub</h4>
+												<p>A functional e-commerce platform with basic functions such as cart management, checkout page.</br>
+												Using TypeScript, Next.js, Tailwind CSS and Stripe.</p>
+												<div class="project-links">
+													<a href="https://github.com/Success12016/commercehub">Github</a>
+													<a href="https://commercehub-phi.vercel.app/">Live Demo</a>
 												</div>
 											</div>
 										</article>
